--- a/edge/_locales/en/messages.json
+++ b/edge/_locales/en/messages.json
@@ -1,8 +1,8 @@
 {
-	"extension_name" : {
+	"appName" : {
 		"message" : "Paprika Bookmarklet"
 	},
-	"extension_description" : {
+	"appDesc" : {
 		"message" : "This non-official extension installs the Paprika bookmarklet on your browser."
 	},
 	"already_saved" : {
